--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "devcharles",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.4.16"
   }
